--- a/Popular-Movies-Stage1/app/src/main/res/layout/activity_main.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,15 @@
         android:layout_height="match_parent"
         tools:context="com.ozan_kalan.popular_movies_stage1.MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+    <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            tools:layout_editor_absoluteY="8dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Hello World!"/>
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            />
 
 </android.support.constraint.ConstraintLayout>
