Implimented Onclick Listener and more...
Added Recyclerview onclick
added details activities
added newtork error textview
added activity title change based on Top movies or Popular movies.

--- a/Popular-Movies-Stage1/app/src/main/res/menu/main_menu.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/menu/main_menu.xml
@@ -4,8 +4,8 @@
 
     <item
             android:id="@+id/menu_pop_movies"
-            android:title="Popular Movies"/>
+            android:title="@string/pop_movie_title"/>
     <item
             android:id="@+id/menu_top_rated"
-            android:title="Top Rated"/>
+            android:title="@string/top_movie_title"/>
 </menu>
