--- a/Popular-Movies-Stage1/app/src/main/res/layout/activity_main.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,15 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.ozan_kalan.popular_movies_stage1.MainActivity">
+        >
+
+    <TextView
+            android:id="@+id/network_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:visibility="invisible"/>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/movies_recycler_view"
