--- a/Popular-Movies-Stage1/app/src/main/res/values/colors.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#26272e</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#0bc4ae</color>
 </resources>
