Contraint layouts are confusing!
fought with ContraintLayout with nested scroll view etc... 

also code clean up.

--- a/Popular-Movies-Stage1/app/src/main/res/layout/activity_main.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/activity_main.xml
@@ -3,24 +3,21 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
     <TextView
             android:id="@+id/network_error"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/zero"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="1"
+            android:layout_gravity="center"
             android:visibility="invisible"/>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/movies_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            tools:layout_editor_absoluteX="8dp"
-            android:layout_marginTop="8dp"/>
+            android:layout_margin="@dimen/default_margin"
+            tools:layout_editor_absoluteX="8dp"/>
 
 </LinearLayout>
