--- a/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
@@ -1,13 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:isScrollContainer="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.ozan_kalan.popular_movies_stage1.activities.MovieDetailsActivity">
 
+    <TextView
+            android:id="@+id/movie_title_txt_view"
+            android:layout_width="@dimen/zero"
+            android:layout_height="@dimen/details_mov_title_height"
+            android:layout_marginTop="@dimen/zero"
+            android:gravity="center_vertical"
+            android:paddingEnd="@dimen/med_lg_margin"
+            android:paddingStart="@dimen/med_lg_margin"
+            android:background="@color/colorAccent"
+            android:elevation="@dimen/med_margin"
+            android:fadingEdge="vertical"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/details_title_txt_size"
+            android:textStyle="bold"/>
+    <ScrollView
+            android:layout_width="@dimen/zero"
+            android:layout_height="@dimen/zero"
+            android:layout_marginBottom="@dimen/default_margin"
+            android:layout_marginTop="@dimen/default_margin"
+            android:fillViewport="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movie_title_txt_view"
+            app:layout_constraintVertical_bias="0.247"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1">
 
-    <include layout="@layout/content_movie_details"/>
+        <android.support.constraint.ConstraintLayout
+                android:id="@+id/parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/med_margin"
+                android:fadingEdge="vertical">
 
+            <ImageView
+                    android:id="@+id/movie_poster_img_view"
+                    android:layout_width="@dimen/poster_width"
+                    android:layout_height="@dimen/poster_height"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/default_margin"
+                    android:contentDescription="@string/content_discrip_poster_of_the_movie"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                    android:id="@+id/release_date_txt_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/lg_margin"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintLeft_toLeftOf="@+id/rating_txt_view"
+                    app:layout_constraintRight_toRightOf="@+id/rating_txt_view"
+                    app:layout_constraintTop_toTopOf="@+id/movie_poster_img_view"
+                    android:textSize="@dimen/title_txt_size"
+                    android:textStyle="bold"/>
+            <TextView
+                    android:id="@+id/rating_txt_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/lg_margin"
+                    android:layout_marginTop="@dimen/default_margin"
+                    app:layout_constraintLeft_toRightOf="@+id/movie_poster_img_view"
+                    app:layout_constraintTop_toBottomOf="@+id/release_date_txt_view"
+                    android:textSize="@dimen/default_txt_size"
+                    android:textStyle="bold"/>
 
-</android.support.design.widget.CoordinatorLayout>
+            <TextView
+                    android:id="@+id/overview_txt_view"
+                    android:layout_width="@dimen/zero"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/med_margin"
+                    android:layout_marginBottom="@dimen/med_lg_margin"
+                    android:layout_marginEnd="@dimen/default_margin"
+                    android:layout_marginLeft="@dimen/default_margin"
+                    android:layout_marginRight="@dimen/default_margin"
+                    android:layout_marginStart="@dimen/default_margin"
+                    android:layout_marginTop="@dimen/med_lg_margin"
+                    android:gravity="center_vertical"
+                    android:isScrollContainer="false"
+                    android:nestedScrollingEnabled="false"
+                    app:layout_constraintBottom_toBottomOf="@+id/parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/movie_poster_img_view"
+                    android:textColorLink="@color/colorAccent"
+                    android:textSize="@dimen/default_txt_size"/>
+        </android.support.constraint.ConstraintLayout>
+
+    </ScrollView>
+
+</android.support.constraint.ConstraintLayout>
+
