--- a/Popular-Movies-Stage1/app/src/main/res/layout/activity_main.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <TextView
             android:id="@+id/network_error"
-            android:layout_width="@dimen/zero"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:layout_gravity="center"
-            android:visibility="invisible"/>
+            android:gravity="center"
+            android:visibility="invisible"
+            android:textSize="@dimen/details_title_txt_size"/>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/movies_recycler_view"
@@ -20,4 +24,4 @@
             android:layout_margin="@dimen/default_margin"
             tools:layout_editor_absoluteX="8dp"/>
 
-</LinearLayout>
+</RelativeLayout>
