start of Stage 2
Using Android Studio 3.0 canary build

--- a/Popular-Movies-Stage1/app/src/main/res/menu/main_menu.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/menu/main_menu.xml
@@ -7,4 +7,7 @@
     <item
             android:id="@+id/menu_top_rated"
             android:title="@string/top_movie_title"/>
+    <item
+        android:id="@+id/menu_favorites"
+        android:title="@string/favorites"/>
 </menu>
