--- a/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
@@ -104,6 +104,18 @@
                     app:layout_constraintTop_toBottomOf="@+id/movie_poster_img_view"
                     android:textColorLink="@color/colorAccent"
                     android:textSize="@dimen/default_txt_size"/>
+            <Button
+                    android:id="@+id/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="75dp"
+                    android:layout_marginStart="7dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/movie_poster_img_view"
+                    app:layout_constraintTop_toBottomOf="@+id/rating_txt_view"
+                    android:text="MARK AS FAVORITE"
+                    android:textSize="12sp"/>
         </android.support.constraint.ConstraintLayout>
 
     </ScrollView>
