--- a/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
@@ -157,15 +157,39 @@
                     android:id="@+id/trailers_recycler_view"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginTop="8dp"
                     android:fadingEdgeLength="30dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/trailers_title"
-                    app:layout_constraintVertical_bias="0.39999998"/>
+                    >
+            </android.support.v7.widget.RecyclerView>
+            <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/trailers_recycler_view"
+                    android:text="Movie Reviews"
+                    app:layout_constraintHorizontal_bias="0.03"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toTopOf="@+id/reviews_recycler_view"/>
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/reviews_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/textView"
+                    app:layout_constraintVertical_bias="0.01999998"/>
 
         </android.support.constraint.ConstraintLayout>
 
