--- a/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
@@ -139,7 +139,9 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/overview_txt_view"/>
+                    app:layout_constraintTop_toBottomOf="@+id/overview_txt_view"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/trailers_title"/>
             <TextView
                     android:id="@+id/trailers_title"
                     android:layout_width="wrap_content"
@@ -152,19 +154,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view"
                     android:text="Trailers:"
-                    />
-            <android.support.v7.widget.RecyclerView
-                    android:id="@+id/trailers_recycler_view"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:fadingEdgeLength="30dp"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/trailers_title"
-                    >
-            </android.support.v7.widget.RecyclerView>
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/trailers_recycler_view"/>
             <TextView
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
@@ -190,6 +181,19 @@
                     android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/textView"
                     app:layout_constraintVertical_bias="0.01999998"/>
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/trailers_recycler_view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="28dp"
+                    android:layout_marginTop="8dp"
+                    android:fadingEdgeLength="30dp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/trailers_title">
+            </android.support.v7.widget.RecyclerView>
 
         </android.support.constraint.ConstraintLayout>
 
