--- a/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
@@ -3,9 +3,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:isScrollContainer="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.ozan_kalan.popular_movies_stage1.activities.MovieDetailsActivity">
@@ -30,6 +30,7 @@
             android:textSize="@dimen/details_title_txt_size"
             android:textStyle="bold"
             />
+
     <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,6 +72,7 @@
                     android:contentDescription="@string/content_discrip_poster_of_the_movie"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
+
             <TextView
                     android:id="@+id/release_date_txt_view"
                     android:layout_width="wrap_content"
@@ -83,6 +85,7 @@
                     app:layout_constraintTop_toTopOf="@+id/movie_poster_img_view"
                     android:textSize="@dimen/title_txt_size"
                     android:textStyle="bold"/>
+
             <TextView
                     android:id="@+id/rating_txt_view"
                     android:layout_width="wrap_content"
@@ -114,6 +117,7 @@
                     app:layout_constraintVertical_bias="0.283"
                     android:textColorLink="@color/colorAccent"
                     android:textSize="@dimen/default_txt_size"/>
+
             <Button
                     android:id="@+id/fav_btn"
                     android:layout_width="wrap_content"
@@ -131,56 +135,64 @@
                     android:id="@+id/view"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:background="?android:attr/listDivider"
+                    app:layout_constraintBottom_toTopOf="@+id/trailers_title"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/overview_txt_view"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/trailers_title"/>
+                    app:layout_constraintTop_toBottomOf="@+id/overview_txt_view"/>
+
             <TextView
                     android:id="@+id/trailers_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/trailers_recycler_view"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/view"
-                    android:text="Trailers:"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/trailers_recycler_view"/>
+                    android:text="@string/trailers"
+                    android:textSize="24sp"
+                    android:textStyle="bold"/>
+
             <TextView
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginLeft="16dp"
                     android:layout_marginTop="16dp"
+                    app:layout_constraintBottom_toTopOf="@+id/reviews_recycler_view"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.03"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/trailers_recycler_view"
-                    android:text="Movie Reviews"
-                    app:layout_constraintHorizontal_bias="0.03"
-                    android:layout_marginBottom="16dp"
-                    app:layout_constraintBottom_toTopOf="@+id/reviews_recycler_view"/>
+                    android:text="@string/movie_reviews"
+                    android:textSize="24sp"
+                    android:textStyle="bold"/>
+
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/reviews_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/textView"
                     app:layout_constraintVertical_bias="0.01999998"/>
+
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/trailers_recycler_view"
                     android:layout_width="0dp"
