--- a/Popular-Movies-Stage1/app/src/main/res/layout/trailer_item.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/trailer_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:orientation="vertical"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="wrap_content">
-
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
             android:id="@+id/trailer_item_title"
@@ -19,7 +19,8 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/trailer_item_img"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="Trailer 1"/>
+            />
+
     <ImageView
             android:id="@+id/trailer_item_img"
             android:layout_width="32dp"
