Using services now for both activities.
Added utils class

--- a/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
+++ b/Popular-Movies-Stage1/app/src/main/res/layout/activity_movie_details.xml
@@ -31,181 +31,193 @@
             android:textStyle="bold"
             />
 
+    <TextView
+        android:id="@+id/network_error"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="@dimen/details_title_txt_size"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/default_margin"
-            android:layout_marginTop="@dimen/default_margin"
-            android:fillViewport="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/movie_title_txt_view"
-            app:layout_constraintVertical_bias="0.247"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1">
+        android:id="@+id/details_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/default_margin"
+        android:layout_marginTop="@dimen/default_margin"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/movie_title_txt_view"
+        app:layout_constraintVertical_bias="0.247"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1">
 
         <android.support.constraint.ConstraintLayout
-                android:id="@+id/parent"
-                android:layout_width="match_parent"
+            android:id="@+id/parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fadingEdge="vertical"
+            android:nestedScrollingEnabled="true"
+            android:paddingBottom="@dimen/med_margin"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movie_title_txt_view"
+            app:layout_constraintVertical_bias="0.0">
+
+            <ImageView
+                android:id="@+id/movie_poster_img_view"
+                android:layout_width="@dimen/poster_width"
+                android:layout_height="@dimen/poster_height"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
+                android:contentDescription="@string/content_discrip_poster_of_the_movie"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/release_date_txt_view"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/lg_margin"
+                android:textSize="@dimen/title_txt_size"
+                android:textStyle="bold"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintLeft_toLeftOf="@+id/rating_txt_view"
+                app:layout_constraintRight_toRightOf="@+id/rating_txt_view"
+                app:layout_constraintTop_toTopOf="@+id/movie_poster_img_view" />
+
+            <TextView
+                android:id="@+id/rating_txt_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/lg_margin"
+                android:layout_marginTop="@dimen/default_margin"
+                android:textSize="@dimen/default_txt_size"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toRightOf="@+id/movie_poster_img_view"
+                app:layout_constraintTop_toBottomOf="@+id/release_date_txt_view" />
+
+            <TextView
+                android:id="@+id/overview_txt_view"
+                android:layout_width="@dimen/zero"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/med_margin"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="@dimen/default_margin"
+                android:layout_marginRight="@dimen/default_margin"
+                android:layout_marginTop="@dimen/med_lg_margin"
+                android:gravity="center_vertical"
+                android:isScrollContainer="false"
+                android:nestedScrollingEnabled="false"
+                android:textColorLink="@color/colorAccent"
+                android:textSize="@dimen/default_txt_size"
+                app:layout_constraintBottom_toTopOf="@+id/trailers_title"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/movie_poster_img_view"
+                app:layout_constraintVertical_bias="0.283" />
+
+            <Button
+                android:id="@+id/fav_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="75dp"
+                android:layout_marginStart="7dp"
                 android:layout_marginTop="8dp"
-                android:paddingBottom="@dimen/med_margin"
-                android:fadingEdge="vertical"
-                android:nestedScrollingEnabled="true"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="@string/mark_fav"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/movie_poster_img_view"
+                app:layout_constraintTop_toBottomOf="@+id/rating_txt_view" />
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintBottom_toTopOf="@+id/trailers_title"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_title_txt_view"
-                app:layout_constraintVertical_bias="0.0">
-
-            <ImageView
-                    android:id="@+id/movie_poster_img_view"
-                    android:layout_width="@dimen/poster_width"
-                    android:layout_height="@dimen/poster_height"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/default_margin"
-                    android:contentDescription="@string/content_discrip_poster_of_the_movie"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@+id/overview_txt_view" />
 
             <TextView
-                    android:id="@+id/release_date_txt_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/lg_margin"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintLeft_toLeftOf="@+id/rating_txt_view"
-                    app:layout_constraintRight_toRightOf="@+id/rating_txt_view"
-                    app:layout_constraintTop_toTopOf="@+id/movie_poster_img_view"
-                    android:textSize="@dimen/title_txt_size"
-                    android:textStyle="bold"/>
+                android:id="@+id/trailers_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/trailers"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/trailers_recycler_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view" />
 
             <TextView
-                    android:id="@+id/rating_txt_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/lg_margin"
-                    android:layout_marginTop="@dimen/default_margin"
-                    app:layout_constraintLeft_toRightOf="@+id/movie_poster_img_view"
-                    app:layout_constraintTop_toBottomOf="@+id/release_date_txt_view"
-                    android:textSize="@dimen/default_txt_size"
-                    android:textStyle="bold"/>
-
-            <TextView
-                    android:id="@+id/overview_txt_view"
-                    android:layout_width="@dimen/zero"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/med_margin"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="@dimen/default_margin"
-                    android:layout_marginRight="@dimen/default_margin"
-                    android:layout_marginTop="@dimen/med_lg_margin"
-                    android:gravity="center_vertical"
-                    android:isScrollContainer="false"
-                    android:nestedScrollingEnabled="false"
-                    app:layout_constraintBottom_toTopOf="@+id/trailers_title"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/movie_poster_img_view"
-                    app:layout_constraintVertical_bias="0.283"
-                    android:textColorLink="@color/colorAccent"
-                    android:textSize="@dimen/default_txt_size"/>
-
-            <Button
-                    android:id="@+id/fav_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="75dp"
-                    android:layout_marginStart="7dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/movie_poster_img_view"
-                    app:layout_constraintTop_toBottomOf="@+id/rating_txt_view"
-                    android:text="@string/mark_fav"
-                    android:textSize="12sp"/>
-
-            <View
-                    android:id="@+id/view"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:background="?android:attr/listDivider"
-                    app:layout_constraintBottom_toTopOf="@+id/trailers_title"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/overview_txt_view"/>
-
-            <TextView
-                    android:id="@+id/trailers_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/trailers_recycler_view"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/view"
-                    android:text="@string/trailers"
-                    android:textSize="24sp"
-                    android:textStyle="bold"/>
-
-            <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintBottom_toTopOf="@+id/reviews_recycler_view"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.03"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/trailers_recycler_view"
-                    android:text="@string/movie_reviews"
-                    android:textSize="24sp"
-                    android:textStyle="bold"/>
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/movie_reviews"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/reviews_recycler_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.03"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/trailers_recycler_view" />
 
             <android.support.v7.widget.RecyclerView
-                    android:id="@+id/reviews_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView"
-                    app:layout_constraintVertical_bias="0.01999998"/>
+                android:id="@+id/reviews_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:layout_constraintVertical_bias="0.01999998" />
 
             <android.support.v7.widget.RecyclerView
-                    android:id="@+id/trailers_recycler_view"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="28dp"
-                    android:layout_marginTop="8dp"
-                    android:fadingEdgeLength="30dp"
-                    app:layout_constraintBottom_toTopOf="@+id/textView"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/trailers_title">
-            </android.support.v7.widget.RecyclerView>
+                android:id="@+id/trailers_recycler_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="28dp"
+                android:layout_marginTop="8dp"
+                android:fadingEdgeLength="30dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/trailers_title"></android.support.v7.widget.RecyclerView>
 
         </android.support.constraint.ConstraintLayout>
 
